# Spy_Detector-1

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/spy_detector/: __main__.py  baseline.py  cli.py  models.py  reporting.py  scanner.py
src/spy_detector/detectors/: __init__.py  network.py  persistence.py  processes.py
