[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-detector"
version = "0.1.0"
description = "Defensive local spy detector for macOS endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psutil>=5.9.8",
]

[project.scripts]
spy-detector = "spy_detector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
